--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.3",
     "react-calendar": "^3.3.1",
+    "react-day-picker": "^7.4.8",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.2",
     "web-vitals": "^1.1.0"
