--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.11.3",
+    "@material-ui/icons": "^4.11.2",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.7.3",
@@ -13,9 +14,11 @@
     "react-calendar": "^3.3.1",
     "react-day-picker": "^7.4.8",
     "react-dom": "^17.0.1",
+    "react-icons": "^4.2.0",
     "react-scripts": "4.0.2",
     "react-table-drag-select": "^0.3.1",
     "react-time-picker": "^4.1.2",
+    "reactjs-popup": "^2.0.4",
     "web-vitals": "^1.1.0"
   },
   "scripts": {
