--- a/package.json
+++ b/package.json
@@ -7,9 +7,10 @@
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.7.0",
+    "bootstrap": "^4.6.0",
     "firebase": "^8.3.0",
     "react": "^17.0.1",
-    "react-bootstrap": "^1.4.3",
+    "react-bootstrap": "^1.5.2",
     "react-calendar": "^3.3.1",
     "react-day-picker": "^7.4.8",
     "react-dom": "^17.0.1",
