--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/user-event": "^12.7.3",
     "bootstrap": "^4.6.0",
     "firebase": "^8.3.0",
+    "firebase-admin": "^9.5.0",
     "googleapis": "^39.2.0",
     "jquery": "^3.6.0",
     "moment": "^2.29.1",
