--- a/package.json
+++ b/package.json
@@ -10,19 +10,23 @@
     "@testing-library/user-event": "^12.7.3",
     "bootstrap": "^4.6.0",
     "firebase": "^8.3.0",
-    "googleapis": "^39.2.0",
+    "googleapis": "^68.0.0",
     "jquery": "^3.6.0",
     "moment": "^2.29.1",
+    "node-fetch": "^2.6.1",
     "react": "^17.0.1",
     "react-bootstrap": "^1.5.2",
     "react-calendar": "^3.3.1",
     "react-day-picker": "^7.4.8",
     "react-dom": "^17.0.1",
+    "react-fieldset": "^3.1.6",
     "react-icons": "^4.2.0",
+    "react-native": "^0.64.0",
     "react-scripts": "4.0.2",
     "react-table-drag-select": "^0.3.1",
     "react-time-picker": "^4.1.2",
     "reactjs-popup": "^2.0.4",
+    "type-fest": "^1.0.1",
     "web-vitals": "^1.1.0"
   },
   "scripts": {
@@ -50,6 +54,7 @@
     ]
   },
   "devDependencies": {
+    "install-peers": "^1.0.3",
     "react-firebase-hooks": "^3.0.2",
     "react-router-dom": "^5.2.0"
   }
