--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "firebase-admin": "^9.5.0",
     "googleapis": "^39.2.0",
     "jquery": "^3.6.0",
+    "mathjs": "^9.3.0",
     "moment": "^2.29.1",
     "react": "^17.0.1",
     "react-bootstrap": "^1.5.2",
