--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.7.3",
     "bootstrap": "^4.6.0",
-    "firebase": "^8.3.0",
+    "firebase": "^8.3.1",
     "firebase-admin": "^9.5.0",
     "googleapis": "^39.2.0",
     "jquery": "^3.6.0",
+    "mathjs": "^9.3.0",
     "moment": "^2.29.1",
     "react": "^17.0.1",
     "react-bootstrap": "^1.5.2",
@@ -51,6 +52,7 @@
     ]
   },
   "devDependencies": {
+    "mathjs": "^9.3.0",
     "react-firebase-hooks": "^3.0.2",
     "react-router-dom": "^5.2.0"
   }
