--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-calendar": "^3.3.1",
     "react-day-picker": "^7.4.8",
     "react-dom": "^17.0.1",
+    "react-google-calendar-api": "^1.3.1",
     "react-icons": "^4.2.0",
     "react-scripts": "4.0.2",
     "react-table-drag-select": "^0.3.1",
